---------------------------------------------------------------------------------------------------
Version: 1.11.2
Date: 2021.09.15
  Changes:
    - Fixed crash when placing teleporters (Teleporter Redux and Personal Teleporter)
    - Re-added Black Market 2 hover credit
---------------------------------------------------------------------------------------------------
Version: 1.11.1
Date: 2021.09.15
  Changes:
    - Fixed debug mode activated
---------------------------------------------------------------------------------------------------
Version: 1.11.0
Date: 2021.09.15
  Changes:
    - Most buttons are displayed as selected when their windows are open
    - 9 new button styles in options
    - 1 new frame type in options
    - Fixed some zombie buttons after unistalling mods
    - Supports YARM - Resource Monitor
    - Supports Nullius
    - Supports NewGame+
    - Supports Inserter Throughput
    - 4 icon changes
    - Reactivated Screenshot Toolkit support
---------------------------------------------------------------------------------------------------
Version: 1.10.4
Date: 2021.09.08
  Changes:
    - Supports Schall Endgame Evolution (keeps roman numerals, adds icon that gets redder when evolving)
    - Fixed visual bug with LTN Manager
---------------------------------------------------------------------------------------------------
Version: 1.10.3
Date: 2021.09.06
  Changes:
    - Fixed FJEI still displaying old icon
    - Fixed Frame option not applying on first try
---------------------------------------------------------------------------------------------------
Version: 1.10.2
Date: 2021.09.06
  Changes:
    - Supports Advanced Logistics System Fork
    - Supports Zoom (fixed + re-published abandoned mod)
    - Supports Production Statistics Monitor HUD
    - Supports Teleportation_Redux
    - Supports PersonalTeleporter
---------------------------------------------------------------------------------------------------
Version: 1.10.1