@@ -16,6 +16,7 @@ local sprites = {
 "schalloreconversion_button", "shuttle_train_button", "simple_circuit_trains_button", "smartchest_button", "solarcalc_button", "somezoom_in_button", "somezoom_out_button", "spacemod_button", "spawncontrol_button",
 "spawncontrol_random_button", "teamcoop_button1", "teamcoop_button2", "teleportation_button", "thefatcontroller_button", "todolist_button", "trainlog_button", "trainpubsub_button",
 "trashcan_button", "upgradeplannernext_button", "usagedetector_button", "whatsmissing_button", "wiiuf_button", "yarm_all_button", "yarm_none_button", "yarm_warnings_button",
+"blueprintlabdesign_button", "recexplo_button",
 }
 
 for _, i in pairs(sprites) do
