@@ -113,6 +113,8 @@
 		"?Nullius",
 		"?inserter-throughput",
 		"?YARM",
-		"?NewGamePlus"
+		"?NewGamePlus",
+		"?RecExplo",
+		"?BlueprintLab_design"
 	]
 }
